# lascar

./: .gitignore  LASCARCTL.md  README.md  pyproject.toml  setup.cfg  setup.py
docs/: api.rst  api_containers.rst  api_engines.rst  api_output.rst  api_plotting.rst  api_session.rst  api_tools.rst  conf.py  index.rst  installation.rst  lascar.container.container.rst  lascar.container.filtered_container.rst  lascar.container.hdf5_container.rst  lascar.container.multiple_container.rst  lascar.container.rst  lascar.container.simulation_container.rst  lascar.container.trace.rst  lascar.engine.classifier_engine.rst  lascar.engine.cpa_engine.rst  lascar.engine.dpa_engine.rst  lascar.engine.engine.rst  lascar.engine.guess_engine.rst  lascar.engine.nicv_engine.rst  lascar.engine.partitioner_engine.rst  lascar.engine.rst  lascar.engine.snr_engine.rst  lascar.engine.ttest_engine.rst  lascar.output.console_output_method.rst  lascar.output.hdf5_output_method.rst  lascar.output.output_method.rst  lascar.output.parse_results.rst  lascar.output.pickle_output_method.rst  lascar.output.plot_output_method.rst  lascar.output.rst  lascar.plotting.plot.rst  lascar.plotting.rst  lascar.rst  lascar.session.rst  lascar.tools.aes.rst  lascar.tools.keras_neural_networks.rst  (+15 more)
examples/: examples.md
images/: logo_donjon  logo_donjon_l  logo_ledger
lascar/: LICENSE  __init__.py  session.py
scripts/: README.md  lascarctl.py
tests/: test_container.py  test_engine.py  test_hdf5_container.py  test_numpy_container.py  test_processing.py
tutorial/: 01-discovering-containers.py  (+8 more)
(+57 files in other folders)
